fix(shortcode): Re-organize instagram style
*Fix overlaping image at media under 400px
*Move html style into css

--- a/assets/css/_partial/_single/_instagram.scss
+++ b/assets/css/_partial/_single/_instagram.scss
@@ -1,5 +1,22 @@
 iframe.instagram-media {
+  min-width: 100px !important;
   [theme=dark] & {
     border: none !important;
+  }
+}
+
+.__h_instagram.card {
+  font-size: 14px;
+  border: 1px solid rgb(219, 219, 219);
+  padding: 0;
+  margin-top: 30px;
+
+  .card-header, .card-body {
+    padding: 10px 10px 10px;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
   }
 }
